<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/welcome_message"
            android:textSize="25sp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q1"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/stone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stone"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/sand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/sand"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n2"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q2"
                android:textSize="20sp"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/undefined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/sin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sine"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n3"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q3"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/entityA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entityA"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/entityB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/entityB"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n4"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q4"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/entityA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entityA"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/entityB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entityB"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n5"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q5"
                android:textSize="20sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/abc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/opt1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/bcd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/opt2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/opt3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/opt4"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n6"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q6"
                android:textSize="20sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:onClick="submitAnswer"/>

    </LinearLayout>


</ScrollView>