<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@android:color/black"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:scaleType="centerCrop"
            android:src="@drawable/gnu" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@android:color/black">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/take_quiz"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:focusedByDefault="false"
                android:hint="@string/fill_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/take_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/take_quiz"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
        </RelativeLayout>
    </LinearLayout>
</layout>